fix image overflow profile modal

--- a/fe/vehicle-module/src/Profil.css
+++ b/fe/vehicle-module/src/Profil.css
@@ -155,9 +155,10 @@
   background-color: #bbbbbb;
 }
 
-.img-modal {
-z-index: 9;
-  height: 40vh;
+.img-modal {  
+  z-index: 9;
+  height: max-content;
+  max-height: 80vh;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -166,6 +167,8 @@ z-index: 9;
 
 .img-modal img {
   max-width: 100%;
+  height: 100%;
+  max-height: 70vh;
   object-fit: contain;
   top: 0;
   border-radius: 15px;
